--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Home/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@section CustomStyle {
+﻿@{
+    ViewBag.Title = "Home";
+}
+
+@section CustomStyle {
     @Styles.Render("~/bundles/homeCss")
 }
 <section id="slider" class="fullheight" style="background: url('../../Images/Landscapes/Players.jpg'); background-position: left bottom">
