--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Item/_ListAvailableAttributeForBonus.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Item/_ListAvailableAttributeForBonus.cshtml
@@ -2,30 +2,25 @@
 
 @{ Layout = null;}
 
-<div class="control-label col-md-2">Bonus to</div>
-<div class="col-md-2" style="height:300px;overflow-y:auto;">
-    <div class="table-responsive">
-        <table id="TableBonus" class="table table-hover">
-            <thead>
-                <tr>
-                    <th>Attribute</th>
-                    <th>Bonus</th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int cont = 0; cont < Model.Count; cont++)
+<table class="table table-bordered" id="TableBonus">
+    <thead>
+        <tr>
+            <th>Attribute</th>
+            <th>Bonus</th>
+        </tr>
+    </thead>
+    <tbody>
+        @for (int cont = 0; cont < Model.Count; cont++)
             {
-                    <tr id="@Html.Raw(Model[cont].Attribute.AttributeId)">
-                        <td class="tdAttributeName">
-                            @Html.DisplayFor(m => Model[cont].Attribute.AttributeName)
-                        </td>
-                        <td class="tdAttributeValue">
-                            @Html.EditorFor(model => model[cont].ItemAttributeValue, new { htmlAttributes = new { @class = "form-control textbox-small float-right ItemAttributeValue" } })
-                            @Html.ValidationMessageFor(model => model[cont].ItemAttributeValue, "", new { @class = "text-danger" })
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</div>
+            <tr id="@Html.Raw(Model[cont].Attribute.AttributeId)">
+                <td class="tdAttributeName">
+                    @Html.DisplayFor(m => Model[cont].Attribute.AttributeName)
+                </td>
+                <td class="tdAttributeValue">
+                    @Html.EditorFor(model => model[cont].ItemAttributeValue, new { htmlAttributes = new { @class = "form-control textbox-small float-right ItemAttributeValue" } })
+                    @Html.ValidationMessageFor(model => model[cont].ItemAttributeValue, "", new { @class = "text-danger" })
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
