--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Create.cshtml
@@ -5,75 +5,73 @@
 }
 
 @section CustomStyle {
-    @Styles.Render("~/bundles/Sprite/Attributes")
     @Styles.Render("~/bundles/Sprite/Acoes")
 }
+<section id="slider" class="fullheight page-attribute">
+    <div class="form-horizontal">
+        <h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
+            <i class="sprite sprite-New-Item animated wow fadeInDown div-icon"></i>
+            &nbsp;New Attribute
+        </h3>
+        <hr />
+        <div id="MessageSummary">
+            @Html.Partial("_MessageSummary")
+        </div>
+        @Html.HiddenFor(model => model.AttributeId)
+        <div class="col-md-12">
+            <div class="form-group">
+                @Html.LabelFor(model => model.AttributeName, new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.AttributeName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AttributeName, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
+            <div class="form-group">
+                @Html.LabelFor(model => model.AttributeDescription, new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.AttributeDescription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AttributeDescription, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-<h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
-    <i class="sprite sprite-New-Item animated wow fadeInDown div-icon"></i>
-    &nbsp;New Attribute
-</h3>
+            <div class="form-group">
+                @Html.LabelFor(model => model.AttributeType, new { @class = "control-label col-md-2" })
+                <div class="col-md-2">
+                    @Html.EnumDropDownListFor(model => model.AttributeType, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.AttributeType, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-
-<div class="form-horizontal">
-    <hr />
-    <div id="MessageSummary">
-        @Html.Partial("_MessageSummary")
-    </div>
-    @Html.HiddenFor(model => model.AttributeId)
-    <div class="col-md-12">
-        <div class="form-group">
-            @Html.LabelFor(model => model.AttributeName, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.AttributeName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AttributeName, "", new { @class = "text-danger" })
+            <div class="form-group" id="div-minimum">
+                @Html.LabelFor(model => model.AttributeMinimum, new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.AttributeMinimum, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AttributeMinimum, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AttributeDescription, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.AttributeDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AttributeDescription, "", new { @class = "text-danger" })
+            <label class="control-label col-md-2">Bonus To:</label>
+            <div class="col-md-6">
+                @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.AttributeBonus);}
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AttributeType, new { @class = "control-label col-md-2" })
-            <div class="col-md-2">
-                @Html.EnumDropDownListFor(model => model.AttributeType, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.AttributeType, "", new { @class = "text-danger" })
+            <div class="col-md-offset-2 col-md-10">
+                <a href="~/Attribute" title="List">
+                    <span class="sprite sprite-List-Item animated wow fadeInDown div-icon"></span>
+                    &nbsp;<span>List</span>
+                </a> |
+                <input type="button" name="CreateAttribute" value="Create" class="btn btn-success" />
             </div>
         </div>
 
-        <div class="form-group" id="div-minimum">
-            @Html.LabelFor(model => model.AttributeMinimum, new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.AttributeMinimum, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AttributeMinimum, "", new { @class = "text-danger" })
-            </div>
-        </div>
     </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">Bonus To:</label>
-        <div class="col-md-4">
-
-            @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.AttributeBonus);}
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <a class="sprite sprite-List-Item div-icon" href="~/Attribute" title="List"></a> | <input type="button" name="CreateAttribute" value="Create" class="btn btn-success" />
-        </div>
-    </div>
-
-</div>
-
+</section>
 @section Scripts {
-    @Scripts.Render("~/Scripts/Attribute.js")
     @Scripts.Render("~/bundles/dataTables")
     <script type="text/javascript">
 
@@ -106,4 +104,5 @@
         InitTable();
 
     </script>
+    @Scripts.Render("~/Scripts/Attribute.js")
 }
