--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Index.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "List of Attributes";
 }
 @section CustomStyle {
-    @Styles.Render("~/bundles/Sprite/Attributes")
     @Styles.Render("~/bundles/Sprite/Acoes")
 }
 
-<section id="slider" class="fullheight" style="background: url('../../Images/Landscapes/Woman.jpg'); background-position: top right">
+<section id="slider" class="fullheight page-attribute">
     <h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
         <i class="sprite sprite-List-Item animated wow fadeInDown div-icon"></i>
         &nbsp;List of Attributes
@@ -21,48 +20,51 @@
         </a>
 
     </p>
-    <table class="table table-striped table-bordered table-hover" id="TabIndex">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.AttributeName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.AttributeDescription)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.AttributeType)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.AttributeMinimum)
-                </th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+    <hr/>
+    <div class="col-md-8">
+        <table class="table table-bordered" id="TabIndex">
+            <thead>
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AttributeName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AttributeDescription)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AttributeType)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AttributeMinimum)
-                    </td>
-                    <td>
-                        <a class="sprite sprite-Edit-Item div-icon" href="~/Attribute/Edit/@item.AttributeId" title="Edit"></a>&nbsp;|&nbsp;
-                        <a class="sprite sprite-Delete-Item div-icon" href="~/Attribute/Delete/@item.AttributeId" title="Remove"></a>
-                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.AttributeName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.AttributeDescription)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.AttributeType)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.AttributeMinimum)
+                    </th>
+                    <th>Actions</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AttributeName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AttributeDescription)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AttributeType)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AttributeMinimum)
+                        </td>
+                        <td>
+                            <a class="sprite sprite-Edit-Item div-icon" href="~/Attribute/Edit/@item.AttributeId" title="Edit"></a>&nbsp;|&nbsp;
+                            <a class="sprite sprite-Delete-Item div-icon" href="~/Attribute/Delete/@item.AttributeId" title="Remove"></a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </section>
 @section scripts {
     @Scripts.Render("~/bundles/dataTables")
