--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/_ListAvailableAttributeForBonus.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/_ListAvailableAttributeForBonus.cshtml
@@ -2,26 +2,31 @@
 
 @{ Layout = null;}
 
-<div style="overflow-y: auto; max-height: 200px;">
-    <table class="table table-striped table-bordered table-hover" id="TableBonus">
-        <thead>
-            <tr>
-                <th style="display: none;"></th>
-                <th colspan="2">Attribute</th>
+<div style="overflow-y: auto; max-height: 250px;">
+<table class="table table-bordered" id="TableBonus">
+    <thead>
+        <tr>
+            <th style="display: none;"></th>
+            <th colspan="2">Attribute</th>
+        </tr>
+    </thead>
+    <tbody>
+        @for (int cont = 0; cont < Model.Count; cont++)
+        {
+            <tr id="@Html.Raw(Model[cont].AttributeId)">
+                <td class="tdAttributeName">
+                    @Html.DisplayFor(m => Model[cont].AttributeName)
+                </td>
+                <td class="tdSelectAttribute">
+                    <label class="switch switch-success AttributeBonus" id="UniqueUse">
+                        <input type="checkbox" checked="@Html.Raw(Model[cont].Selected)">
+                        <span class="switch-label" data-on="YES" data-off="NO"></span>
+                    </label>
+
+                    @*@Html.CheckBoxFor(m => Model[cont].Selected, new { @class = "AttributeBonus" })*@
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            @for (int cont = 0; cont < Model.Count; cont++)
-            {
-                <tr id="@Html.Raw(Model[cont].AttributeId)">
-                    <td class="tdAttributeName">
-                        @Html.DisplayFor(m => Model[cont].AttributeName)
-                    </td>
-                    <td class="tdSelectAttribute">
-                        @Html.CheckBoxFor(m => Model[cont].Selected, new { @class = "AttributeBonus" })
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+        }
+    </tbody>
+</table>
 </div>
