--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Campaign/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Campaign/Index.cshtml
@@ -1,69 +1,121 @@
 ﻿@model IEnumerable<DaemonCharacter.Application.ViewModels.Campaign.CampaignViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List of Campaigns";
+}
+@section CustomStyle {
+    @Styles.Render("~/bundles/Sprite/Acoes")
 }
 
-<h2>Index</h2>
+<section id="slider" class="fullheight page-campaign">
+    <h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
+        <i class="sprite sprite-List-Item animated wow fadeInDown div-icon"></i>
+        &nbsp;List of Campaigns
+    </h3>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CampaignName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CampaignShortDescription)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CampaignBriefing)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CampaignStartYear)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CampaignMaxPlayers)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CampaignImg)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CampaignStatus)
-        </th>
-        <th></th>
-    </tr>
+    <p>
+        <a href="~/Campaign/Create" title="Create new">
+            <span class="sprite sprite-New-Item animated wow fadeInDown div-icon"></span>
+            &nbsp;<span>Create New</span>
+        </a>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CampaignName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CampaignShortDescription)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CampaignBriefing)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CampaignStartYear)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CampaignMaxPlayers)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CampaignImg)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CampaignStatus)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CampaignId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CampaignId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CampaignId })
-        </td>
-    </tr>
+    </p>
+    <hr />
+    <div class="col-md-8">
+        <table class="table table-bordered" id="TabIndex">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CampaignName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CampaignShortDescription)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CampaignBriefing)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CampaignStartYear)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CampaignMaxPlayers)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CampaignImg)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CampaignStatus)
+                    </th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CampaignName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CampaignShortDescription)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CampaignBriefing)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CampaignStartYear)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CampaignMaxPlayers)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CampaignImg)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CampaignStatus)
+                        </td>
+                        <td>
+                            <a class="sprite sprite-Edit-Item div-icon" href="~/Campaign/Edit/@item.CampaignId" title="Edit"></a>&nbsp;|&nbsp;
+                            <a class="sprite sprite-Delete-Item div-icon" href="~/Campaign/Delete/@item.CampaignId" title="Remove"></a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</section>
+@section scripts {
+    @Scripts.Render("~/bundles/dataTables")
+    <script type="text/javascript">
+
+        function InitTable() {
+
+            var table = jQuery('#TabIndex');
+
+            /* Fixed header extension: http://datatables.net/extensions/scroller/ */
+
+            var oTable = table.dataTable({
+                "dom": "<'row'<'col-md-6 col-sm-12'l><'col-md-6 col-sm-12'f>r>t<'row'<'col-md-5 col-sm-12'i><'col-md-7 col-sm-12'p>>", // datatable layout without  horizobtal scroll
+                "scrollY": "300",
+                "deferRender": true,
+                "order": [
+                    [0, 'asc']
+                ],
+                "lengthMenu": [
+                    [5, 15, 20, -1],
+                    [5, 15, 20, "All"] // change per page values here
+                ],
+                "pageLength": 10 // set the initial value
+            });
+
+
+            var tableWrapper = jQuery('#TabIndex'); // datatable creates the table wrapper by adding with id {your_table_jd}_wrapper
+            tableWrapper.find('.dataTables_length select').select2(); // initialize select2 dropdown
+        }
+
+
+        // Table Init
+        InitTable();
+
+    </script>
 }
-
-</table>
