--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Item/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Item/Create.cshtml
@@ -4,13 +4,15 @@
     ViewBag.Title = "Creating new Item";
 }
 
-<h2>Creating new Item</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal Playercontainer">
+@section CustomStyle {
+    @Styles.Render("~/bundles/Sprite/Acoes")
+}
+<section id="slider" class="fullheight page-item">
+    <div class="form-horizontal">
+        <h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
+            <i class="sprite sprite-New-Item animated wow fadeInDown div-icon"></i>
+            &nbsp;New Item
+        </h3>
         <hr />
         <div id="MessageSummary">
             @Html.Partial("_MessageSummary")
@@ -42,34 +44,75 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.ItemCategory, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-2">
-                @Html.EnumDropDownListFor(model => model.ItemCategory, htmlAttributes: new { @class = "form-control" })
+            <div class="col-md-2" style="color: white;">
+                @Html.EnumDropDownListFor(model => model.ItemCategory, htmlAttributes: new { @class = "form-control select2" })
                 @Html.ValidationMessageFor(model => model.ItemCategory, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UniqueUse, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UniqueUse, htmlAttributes: new { @class = "control-label col-md-2 " })
             <div class="col-md-2">
-                    @Html.CheckBoxFor(model => model.UniqueUse, htmlAttributes: new { @class = "checkbox" })
+                <label class="switch switch-info" id="UniqueUse">
+                    <input type="checkbox" checked="">
+                    <span class="switch-label" data-on="YES" data-off="NO"></span>
+                </label>
             </div>
         </div>
 
         <div class="form-group">
-            @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.ItemAttribute);}
+            <label class="control-label col-md-2">Bonus To:</label>
+            <div class="col-md-4">
+                @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.ItemAttribute);}
+            </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Back to List", "Index") | <input type="button" name="CreateItem" value="Create" class="btn btn-success" />
+                <a href="~/Item" title="List">
+                    <span class="sprite sprite-List-Item animated wow fadeInDown div-icon"></span>
+                    &nbsp;<span>List</span>
+                </a> | <input type="button" name="CreateItem" value="Create" class="btn btn-success" />
             </div>
         </div>
 
     </div>
-                }
 
+</section>
 @section Scripts {
     @Scripts.Render("~/Scripts/Item.js")
+    @Scripts.Render("~/bundles/dataTables")
+    <script type="text/javascript">
+
+        function InitTable() {
+
+            var table = jQuery('#TableBonus');
+
+            /* Fixed header extension: http://datatables.net/extensions/scroller/ */
+
+            var oTable = table.dataTable({
+                "dom": "<'row'<'col-md-6 col-sm-12'l><'col-md-6 col-sm-12'f>r>t<'row'<'col-md-5 col-sm-12'i><'col-md-7 col-sm-12'p>>", // datatable layout without  horizobtal scroll
+                "scrollY": "300",
+                "deferRender": true,
+                "order": [
+                    [0, 'asc']
+                ],
+                "lengthMenu": [
+                    [5, 15, 20, -1],
+                    [5, 15, 20, "All"] // change per page values here
+                ],
+                "pageLength": 10 // set the initial value
+            });
+
+
+            var tableWrapper = jQuery('#TableBonus'); // datatable creates the table wrapper by adding with id {your_table_jd}_wrapper
+            tableWrapper.find('.dataTables_length select').select2(); // initialize select2 dropdown
+        }
+
+        // Table Init
+        InitTable();
+
+    </script>
 }
 
 
